--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "url": "https://github.com/Efk3/angular-block.git"
   },
   "keywords": [
-    "angular", "busy", "block", "loading", "loading indicator", "service", "directive"
+    "angular",
+    "busy",
+    "block",
+    "loading",
+    "loading indicator",
+    "service",
+    "directive"
   ],
   "scripts": {
     "build": "ng-packagr -p package.json",
@@ -70,10 +76,10 @@
     "@types/node": "~6.0.60",
     "codecov": "^3.0.2",
     "husky": "^1.0.0-rc.8",
-    "jest": "^23.1.0",
-    "jest-preset-angular": "^5.2.1",
+    "jest": "^23.6.0",
+    "jest-preset-angular": "^5.2.3",
     "lint-staged": "^7.1.3",
-    "ng-packagr": "^3.0.0",
+    "ng-packagr": "^4.4.0",
     "prettier": "^1.11.1",
     "rxjs": "^6.0.0",
     "tslint": "~5.9.1",
